--- a/Travel/Paket/templates/paket/viewPaket.html
+++ b/Travel/Paket/templates/paket/viewPaket.html
@@ -2,7 +2,11 @@
 {% load static %}
 
 {% block content %}
-	<h1>DATA</h1>
+	<h1>Home / Travel Package</h1>
+	<form action="{% url "paket:search" %}">
+		<input type="text" name="search" placeholder="Search">
+		<input type="submit" value="Search">
+	</form>
 	{% for i in paket_object %}
 		<h3>Nama Paket : {{i.nama_paket}}</h3>
 		<h4>Destinasi : {{i.destinasi}}</h4>
