--- a/Travel/templates/include/navbar.html
+++ b/Travel/templates/include/navbar.html
@@ -14,7 +14,7 @@
       </li>
       <li class="nav-item">
       	{% if user.is_authenticated %}
-      		<a class="nav-link" href="#">LOGOUT</a>
+      		<a class="nav-link" href="{% url "akun:logout" %}">LOGOUT</a>
       		{% else %}
       		<a class="nav-link" href="{% url "akun:login" %}">LOGIN</a>
       	{% endif %}
