--- a/styles/main.scss
+++ b/styles/main.scss
@@ -63,7 +63,7 @@ header{
 
 .section-popular{
     background-color: #EFF9FA;
-    min-height: 1800px;
+    min-height: 1300px;
     
     .text-popular{
             font-weight: bold;
@@ -135,3 +135,27 @@ header{
     }
 }
 
+.section-testimonials{
+    min-height: 506px;
+}
+
+.text-testi{
+    text-align: center;
+    margin-top: 30px;
+    font-weight: bold;
+    margin-bottom: 30px;
+}
+
+.card-testimonials{
+    margin-top: 20px;
+    min-height: 300px;
+}
+
+.section-footer{
+    a{
+        color: #0BA0AC;
+    }
+}
+//  footer .section-footer{
+//     margin-top: -2000px;
+// }
