--- a/Travel/templates/include/navbar.html
+++ b/Travel/templates/include/navbar.html
@@ -1,24 +1,26 @@
 {% load static %}
-
-<nav class="navbar navbar-light bg-light">
-  <div class="navbar-brand">
-  	 <img src="{% static "image/Logo.png" %}" width="30" height="30" alt="" loading="lazy">
-  </div>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+<nav class="navbar navbar-expand-lg navbar-light shadow-sm">
+  <a class="navbar-brand ml-5" href="#">
+    <img src="{% static '/images/Logo.png' %}" alt="">
+  </a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+
+  <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+    <ul class="navbar-nav ml-auto mr-5 mt-2 mt-lg-0">
+      <li class="nav-item">
+        <a class="nav-link" href="#">Home</a>
       </li>
       <li class="nav-item">
-      	{% if user.is_authenticated %}
-      		<a class="nav-link" href="{% url "akun:logout" %}">LOGOUT</a>
-      		{% else %}
-      		<a class="nav-link" href="{% url "akun:login" %}">LOGIN</a>
-      	{% endif %}
+        <a class="nav-link" href="#">Travel Package</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Testimonials</a>
+      </li>
+     
     </ul>
+      <button class="btn btn-login mr-5" type="submit">Masuk</button>
+    </form>
   </div>
 </nav>
