--- a/Travel/templates/home.html
+++ b/Travel/templates/home.html
@@ -52,7 +52,7 @@
            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor repellat tempora assumenda sit quibusdam voluptatibus quasi eos. Odit laboriosam necessitatibus cum laborum, velit eveniet repudiandae cumque ex laudantium deleniti quis.
           </p>     
          </div>
-        <div class="col-sm-6 col-md-4 ">
+         <div class="col-sm-6 col-md-4 ">
           <div class="card-travel shadow-lg rounded" >
             <img class="card-img-top" src="images/item-4 1.png" alt="Card image cap">
             <div class="card-body">
@@ -112,7 +112,13 @@
             </div>
           </div>
         </div>
-
+      </div>
+    </div>
+  </section>
+  
+  <!-- <section class="section-more">
+    <div class="container">
+      <div class="row">
         <div class="col-md-4 col-sm-6">
           <div class="text-more">
              Find More 
@@ -125,8 +131,8 @@
         </div>
       </div>
     </div>
-  </section>
-
+  </section> -->
+ 
   <!-- Section Testimonials -->
 
   <section class="section-testimonials" id="testimonials">
