--- a/styles/main.scss
+++ b/styles/main.scss
@@ -65,7 +65,7 @@ header{
 
 .section-popular{
     background-color: #EFF9FA;
-    min-height: 1300px;
+    min-height: 1000px;
     
     .text-popular{
             font-weight: bold;
@@ -216,7 +216,7 @@ header{
 }
 
 
-.ccolor-heart{
+.color-heart{
     color: pink;
 }
 h1{ 
@@ -228,4 +228,9 @@ h2{
 p{
     font-size: 18px;
     color: #b1b1b1;
+}
+
+
+.section-more{
+    background-color:#EFF9FA;
 }
