--- a/Travel/templates/home.html
+++ b/Travel/templates/home.html
@@ -52,7 +52,6 @@
            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor repellat tempora assumenda sit quibusdam voluptatibus quasi eos. Odit laboriosam necessitatibus cum laborum, velit eveniet repudiandae cumque ex laudantium deleniti quis.
           </p>
          </div>
-<<<<<<< HEAD
          {% for i in data %}
           <div class="col-sm-6 col-md-4 ">
             <div class="card-travel shadow-lg rounded" >
@@ -69,78 +68,14 @@
             </div>
           </div>
          {% endfor %}
-      
-        
 
-=======
-         <div class="col-sm-6 col-md-4 ">
-          <div class="card-travel shadow-lg rounded" >
-            <img class="card-img-top" src="images/item-4 1.png" alt="Card image cap">
-            <div class="card-body">
-              <h5 class="card-title">Lombok</h5>
-              <p class="card-text">Nusa Tenggara Barat</p>
-              <a href="#" class="btn btn-details float-right">Details</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-4 ">
-          <div class="card-travel shadow-lg rounded" >
-            <img class="card-img-top" src="images/item-4 1.png" alt="Card image cap">
-            <div class="card-body">
-              <h5 class="card-title">Lombok</h5>
-              <p class="card-text">Nusa Tenggara Barat</p>
-              <a href="#" class="btn btn-details float-right">Details</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-4 ">
-          <div class="card-travel shadow-lg rounded">
-            <img class="card-img-top" src="images/item-4 1.png" alt="Card image cap">
-            <div class="card-body">
-              <h5 class="card-title">Lombok</h5>
-              <p class="card-text">Nusa Tenggara Barat</p>
-              <a href="#" class="btn btn-details float-right">Details</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-4 ">
-          <div class="card-travel shadow-lg rounded" >
-            <img class="card-img-top" src="images/item-4 1.png" alt="Card image cap">
-            <div class="card-body">
-              <h5 class="card-title">Lombok</h5>
-              <p class="card-text">Nusa Tenggara Barat</p>
-              <a href="#" class="btn btn-details float-right">Details</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-4 ">
-          <div class="card-travel shadow-lg rounded" >
-            <img class="card-img-top" src="images/item-4 1.png" alt="Card image cap">
-            <div class="card-body">
-              <h5 class="card-title">Lombok</h5>
-              <p class="card-text">Nusa Tenggara Barat</p>
-              <a href="#" class="btn btn-details float-right">Details</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-4 ">
-          <div class="card-travel shadow-lg rounded">
-            <img class="card-img-top" src="images/item-4 1.png" alt="Card image cap">
-            <div class="card-body">
-              <h5 class="card-title">Lombok</h5>
-              <p class="card-text">Nusa Tenggara Barat</p>
-              <a href="#" class="btn btn-details float-right">Details</a>
-            </div>
-          </div>
-        </div>
       </div>
     </div>
   </section>
   
-  <!-- <section class="section-more">
+  <section class="section-more">
     <div class="container">
       <div class="row">
->>>>>>> e82c826bb2cfdbb62b5e703bede8562e03e93732
         <div class="col-md-4 col-sm-6">
           <div class="text-more">
              Find More 
@@ -153,7 +88,7 @@
         </div>
       </div>
     </div>
-  </section> -->
+  </section>
  
   <!-- Section Testimonials -->
 
