--- a/styles/main.scss
+++ b/styles/main.scss
@@ -65,7 +65,7 @@ header{
 
 .section-popular{
     background-color: #EFF9FA;
-    min-height: 1000px;
+    min-height: 800px;
     
     .text-popular{
             font-weight: bold;
@@ -74,7 +74,7 @@ header{
         }
     
     .text-popular-2{
-        font-weight: normal;
+        font-weight: bold;
         font-size: 15px;
         margin-top: 130px ;
     }
