--- a/Travel/Paket/templates/paket/detailPaket.html
+++ b/Travel/Paket/templates/paket/detailPaket.html
@@ -35,56 +35,32 @@
 						<h1>{{object.nama_paket}}</h1>
 						<p>{{object.destinasi}}	</p>
 						<div class="gallery ml-2">
+							{% with img|first as pertama %}
 							<div class="xzoom-container">
-								<img 
-									src="images/item-2.jpg" 
-									class="xzoom" 
-									id="xzoom-default" 
-									xoriginal="images/item-2.jpg">
+								
+								
+								   <img 
+									src="{{pertama.getImage}}" 
+									class="xzoom"
+									id="xzoom-default"
+									xoriginal="{{pertama.id}}"> 
 							</div>
 							<div class="xzoom-thumbs mt-2">
-								<a href="images/item-2.jpg">
+								{% for x in img %}
+								
 								<img 
-									src="images/item-2.jpg" 
+									src="{{x.getImage}}" 
 									class="xzoom-gallery" 
 									width="120" 
-									xpreview="images/item-2.jpg">
+									xpreview="{{pertama.id}}">
 								</a>
-								<a href="images/item-2.jpg">
-									<img 
-										src="images/item-2.jpg" 
-										class="xzoom-gallery" 
-										width="120" 
-										xpreview="images/item-2.jpg">
-									</a>
-									<a href="images/item-2.jpg">
-								<img 
-									src="images/item-2.jpg" 
-									class="xzoom-gallery" 
-									width="120" 
-									xpreview="images/item-2.jpg">
-								</a>
-								<a href="images/item-2.jpg">
-									<img 
-										src="images/item-2.jpg" 
-										class="xzoom-gallery" 
-										width="120" 
-										xpreview="images/item-2.jpg">
-									</a>
-									<a href="images/item-2.jpg">
-										<img 
-											src="images/item-2.jpg" 
-											class="xzoom-gallery" 
-											width="120" 
-											xpreview="images/item-2.jpg">
-										</a>
+								{% endfor %}
 							</div>
+							{% endwith %}
 						</div>
 	
 						<h1>Deskripsi Paket</h1>
 						<p class="text-description">{{object.about}}</p>
-	
-						
 			  </div>
 			  
 			</div>
@@ -96,19 +72,19 @@
 					  <tr>
 						  <td width='50%'>Duration</td>
 						  <td width='50%' class="text-right">
-							 4 D
+							 {{object.lama_hari}} Hari
 						  </td>
 					  </tr>
 					  <tr>
 						  <td width='40%'>Price</td>
-						  <td width='60%' class="text-right">
-						   Rp 500 K / Person
+						  <td width='70%' class="text-right">
+						   Rp {{object.harga|intcomma}} / Person
 						  </td>
 					  </tr>
 					  <tr>
 						  <td width='50%'>Date of Depature</td>
 						  <td width='50%' class="text-right">
-							 22 Aug 2019
+							 {{object.tgl_berangkat}}
 						  </td>
 					  </tr>
 				  </table>
