--- a/Travel/Paket/templates/paket/detailPaket.html
+++ b/Travel/Paket/templates/paket/detailPaket.html
@@ -90,7 +90,7 @@
 				  </table>
 		  </div>
 		  <div class="join-container">
-			  <a href="checkout.html" class="btn btn-block btn-join-now mt-3 py-2">
+			  <a href="{% url "transaksi:checkOut" object.slug%}" class="btn btn-block btn-join-now mt-3 py-2">
 				  Join Now
 			  </a>
 		   </div>
