--- a/Travel/templates/home.html
+++ b/Travel/templates/home.html
@@ -24,7 +24,7 @@
             <br>
             Local Expert
           </p>
-          <a href="#" class="btn btn-get-started mt-4 mr-4">Get Started</a>
+          <a href="{% url "paket:search" %}" class="btn btn-get-started mt-4 mr-4">Get Started</a>
         </div>
         <div class="col-md-4 text-center">
           <img src="{% static 'images/line.png' %}" alt="">
