--- a/Travel/static/styles/main.css
+++ b/Travel/static/styles/main.css
@@ -57,52 +57,63 @@ header .banner-txt {
 }
 
 .section-popular .text-popular {
+  color: #000000;
   font-weight: bold;
   font-size: 40px;
   margin-top: 100px;
 }
 
 .section-popular .text-popular-2 {
+  color: #000000;
   font-weight: normal;
   font-size: 15px;
-  margin-top: 130px;
+  margin-top: 110px;
 }
 
 .card-travel {
   margin-top: 50px;
 }
 
-.card-body {
+.card-travel .card-body {
   min-height: 200px;
 }
 
-.card-body .card-title {
+.card-travel .card-body .card-title {
   font-size: 30px;
   font-weight: bold;
 }
 
-.card-body .card-text {
+.card-travel .card-body img {
+  background-size: cover;
+}
+
+.card-travel .card-body .card-text {
   margin-top: -15px;
   font-size: 20px;
   font-weight: normal;
 }
 
-.card-body .card-body {
+.card-travel .card-body .card-body {
   border-radius: 10px;
   -webkit-box-shadow: #fafafa;
           box-shadow: #fafafa;
 }
 
-.card-body .btn-details {
+.card-travel .card-body .btn-details {
   width: 100px;
   background-color: #0BA0AC;
   color: white;
 }
 
-.card-body .btn-details:hover {
+.card-travel .card-body .btn-details:hover {
   background-color: #2dbac4;
   color: #ffffff;
   width: 100px;
+}
+
+.section-more {
+  background-color: #fff;
+  min-height: 300px;
 }
 
 .text-more {
@@ -111,7 +122,7 @@ header .banner-txt {
   font-weight: bold;
 }
 
-.text-more .text-more-2 {
+.text-more-2 {
   font-size: 30px;
 }
 
@@ -122,7 +133,6 @@ header .banner-txt {
   font-weight: bold;
   font-size: 20px;
   text-align: center;
-  margin-left: 100px;
   background-color: #0BA0AC;
   color: #ffffff;
 }
@@ -199,7 +209,7 @@ header .banner-txt {
   color: #fff;
 }
 
-.ccolor-heart {
+.color-heart {
   color: pink;
 }
 
