--- a/Travel/static/styles/main.scss
+++ b/Travel/static/styles/main.scss
@@ -1,3 +1,5 @@
+$maincolor:#0BA0AC;
+$hovercolor :#2dbac4;
 
 body{
     font-family: 'PT Sans Caption', sans-serif;
@@ -12,12 +14,12 @@ body{
 }
 
 .btn-login{
-    background-color: #0BA0AC;
+    background-color: $maincolor;
     color : #ffffff;
     width: 100px;
     font-weight: bold;
     &:hover{
-        background-color: #2dbac4;
+        background-color: $hovercolor;
         color : #ffffff;
         width: 100px;
         font-weight: bold;
@@ -27,7 +29,7 @@ body{
 .nav-link{
     margin-right: 5px;
     &:hover{
-        border-bottom: 3px solid #0BA0AC ;
+        border-bottom: 3px solid $maincolor ;
       
     }
    
@@ -53,10 +55,10 @@ header{
 
 
 .btn-get-started{
-    background-color: #0BA0AC ;
+    background-color: $maincolor ;
     color : #ffffff;
     &:hover{
-        background-color: #2dbac4;
+        background-color: $hovercolor;
         color : #ffffff;
     }
 }
@@ -68,58 +70,69 @@ header{
     min-height: 1300px;
     
     .text-popular{
+            color: #000000;
             font-weight: bold;
             font-size: 40px;
             margin-top: 100px;
         }
     
     .text-popular-2{
+        color: #000000;
         font-weight: normal;
         font-size: 15px;
-        margin-top: 130px ;
+        margin-top: 110px ;
     }
 
    
 }
-
 .card-travel{
     margin-top: 50px;
-}
-.card-body{
-    min-height: 200px;
-    .card-title{
-        font-size: 30px;
-        font-weight: bold;
-    }
-    
-    .card-text{
-        margin-top: -15px;
-        font-size: 20px;
-        font-weight:normal;
-    }
     .card-body{
-        border-radius: 10px;
-        box-shadow: #fafafa;
-    }
-    .btn-details{
-        width: 100px;
-        background-color: #0BA0AC ;
-        color: white;
-        &:hover{
-            background-color: #2dbac4;
-            color : #ffffff;
+        min-height: 200px;
+        .card-title{
+            font-size: 30px;
+            font-weight: bold;
+        }
+        
+        img{
+            background-size: cover;
+        }
+        .card-text{
+            margin-top: -15px;
+            font-size: 20px;
+            font-weight:normal;
+        }
+        .card-body{
+            border-radius: 10px;
+            box-shadow: #fafafa;
+        }
+        .btn-details{
             width: 100px;
+            background-color: $maincolor ;
+            color: white;
+            &:hover{
+                background-color: $hovercolor;
+                color : #ffffff;
+                width: 100px;
+            }
         }
     }
 }
 
+
+.section-more{
+    background-color: #fff ;
+    min-height: 300px;    
+    
+}
 .text-more{
     margin-top: 100px;
     font-size: 40px;
     font-weight: bold;
-    .text-more-2{
-        font-size: 30px;
-    }
+    
+}
+.text-more-2{
+    font-size: 30px;
 }
 .btn-more{
     width: 200px;
@@ -128,15 +141,13 @@ header{
     font-weight: bold;
     font-size: 20px;
     text-align: center;
-    margin-left: 100px;
-    background-color: #0BA0AC ;
+    background-color: $maincolor ;
     color : #ffffff;
     &:hover{
-        background-color: #2dbac4;
+        background-color: $hovercolor;
         color : #ffffff;
     }
 }
-
 .section-testimonials{
     min-height: 506px;
 }
@@ -155,7 +166,7 @@ header{
 
 .section-footer{
     a{
-        color: #0BA0AC;
+        color: $maincolor;
     }
 }
 //  footer .section-footer{
@@ -174,13 +185,13 @@ header{
     .breadcrumb-item{
         &.active{
             
-            color: #0BA0AC;
+            color: $maincolor;
         }
     }
 }
 
 .btn-search{
-    background-color: #0BA0AC ;
+    background-color: $maincolor ;
 }
 
 .icon-color{
@@ -192,7 +203,7 @@ header{
     min-height: 1000px;
     
     .price-text{
-        color:  #0BA0AC;
+        color:  $maincolor;
         font-size: 20px;
     }
     .card-details{
@@ -205,18 +216,18 @@ header{
 
     }
     .btn-join-now{
-        background-color: #0BA0AC;
+        background-color: $maincolor;
         color: #ffffff;
         border-radius: 0;
         &:hover{
-            background-color: #2dbac4;
+            background-color: $hovercolor;
             color: #fff;
         }
     }
 }
 
 
-.ccolor-heart{
+.color-heart{
     color: pink;
 }
 h1{ 
