--- a/Travel/static/styles/main.scss
+++ b/Travel/static/styles/main.scss
@@ -240,3 +240,49 @@ p{
     font-size: 18px;
     color: #b1b1b1;
 }
+
+// Modal 
+
+
+.modal-title{
+    color: $maincolor!important;
+    font-size: 50px;
+   margin-left: 20px;
+}
+.modal-content{
+    border-radius: 10px;
+    min-height: 500px;
+    border: none;
+    
+}
+.modal-body{
+    label{
+        color: $maincolor;
+    }
+    img{
+       justify-items: center;
+    }
+    .form-group{
+        input{
+            font-size: 20px;
+        }
+    }
+    .form-control{
+        border-radius: 10px;
+        border-color: $maincolor;
+        height: 50px;
+    }
+   .btn-login-modal{
+
+       border-radius: 10px;
+       background-color: $maincolor;
+       color: #fff;
+       font-weight: bold;
+       font-size: 20px;
+       width: 50%;
+       margin-top: 30px;
+   }
+   .modal-login{
+       margin-top: 30px;
+   }
+}   
