--- a/Travel/templates/PaketView.html
+++ b/Travel/templates/PaketView.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>{{title}}</title>
 	{% include "./include/css.html" %}
+	<title>{{title}}</title>
+	
 
 </head>
 <body>
 
 	{% include './include/navbar.html' %}
 	{% block content %}
+	
 	{% endblock content %}
 	{% include './include/footer.html' %}
+	{% include './include/modal.html' %}
 	{% include "./include/js.html" %}
 </body>
 </html>
