adding pages success and checkout

--- a/Travel/Transaksi/templates/transaksi/checkOut.html
+++ b/Travel/Transaksi/templates/transaksi/checkOut.html
@@ -1,9 +1,14 @@
+{% load static %}
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	{% include '/templates/include/css.html' %}
 	<title>{{title}}</title>
 </head>
 <body>
-	<h1>{{title}}</h1>
+	{% include '/templates/include/navbar-alternate.html' %}
+
 </body>
 </html>
