--- a/Travel/templates/include/navbar.html
+++ b/Travel/templates/include/navbar.html
@@ -20,11 +20,9 @@
       </li>
      
     </ul>
-    {% if user.is_authenticated %}
-        <a class="btn btn-login mr-5" href="{% url 'akun:logout' %}">KELUAR</a>
-        {% else %}
-        <a class="btn btn-login mr-5" data-toggle="modal" data-target="#modalLogin" href="{% url 'akun:login' %}?next={{request.path|urlencode}}">MASUK</a>
-    {% endif %}
+   
+        <button class="btn btn-login mr-5" data-toggle="modal" data-target="#modalLogin" href="#">MASUK</button>
+    
       
     </form>
     {% include './modal.html' %}
